--- a/ACT7/style.css
+++ b/ACT7/style.css
@@ -1,11 +1,51 @@
 /* Use CSS to style your page */
 
 body {
-  font-family: "Benton Sans", "Helvetica Neue", helvetica, arial, sans-serif;
-  margin: 2em;
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif, 'Arial Narrow', Arial, sans-serif, "Helvetica Neue", helvetica, arial, sans-serif;
+  /* margin: 2em; */
+  font-size: 3em;
+  /* border: #373fff solid; */
+  max-width: 100%;
+  height: 100%;
+  
 }
 
 h1 {
-  font-style: italic;
-  color: #373fff;
+  margin: 1%;
+  font-family:cursive;
+  font-style:italic;
+  color: #00a2f9;
+  font-size: 50%;
+  text-align: center;
 }
+ ul {
+  list-style-type: none;
+  /* border: #13aa5e solid; */
+  margin-top: 8%;
+ }
+
+.container {
+  width: 50%;
+}
+
+ .pic {
+  /* text-align: center; */
+  /* float:inline-start */
+  /* border: #373fff solid; */
+  max-width: 100%;
+  /* margin-left: 30%; */
+  /* margin-right: 30%; */
+  border-radius: 10%;
+ }
+
+ li {
+  font-size: 35%;
+ }
+
+ .row {
+  border:ridge 5px #666e85;
+  margin:2%;
+ }
+ .col-sm {
+  vertical-align: middle;
+ }
